--- a/css/showpro.css
+++ b/css/showpro.css
@@ -287,7 +287,6 @@ pre {
   filter: none;
 }
 .main-side-nav{
-  top: 20vh;
 }
 #Real_content{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -313,3 +312,151 @@ pre {
 .hidden{
   z-index: -10;;
 }
+
+@media(max-width:750px) {
+  .main-side-nav{
+    top: 5vh;
+  }
+
+  #innerbox1,#innerbox2{
+    width: 100%;
+  }
+  #innerbox1{
+    padding: 0;
+  }
+  #any2,#any{
+    padding: 10px 5px;
+    font-size: 15px;
+  }
+  
+  #innerbox1 img{
+    object-fit: cover;
+  }
+  #box{
+    flex-direction: column;
+  }
+  #innerbox2,#innerbox2 h2{
+    text-align: center;
+  }
+  #desc{
+    margin: auto;
+    width: 80%;
+  }
+  #show{
+    margin: 50px 0;
+    padding: 5px 0;
+  }
+  .content-checkout{
+    width: 80%;
+  }
+  #main{
+    width: 50%;
+    height: max-content;
+    padding: 0;
+  }
+  .secondpro{
+    flex-wrap: wrap;
+  }
+  .second-h2{
+    margin: 50px 0 0;
+  }
+  #buybtn{
+    margin:20px 0 0;
+  }
+  .footer div div{
+    flex-wrap:wrap ;
+    justify-content: left;
+  }
+  #pro
+  {
+    object-fit: cover;
+    height: auto;
+  }
+  #show{
+    width: 100%;
+  }
+  #prp-img{
+    width: 100%;
+  }#buybtn2{
+    content: "BUY";
+    width: 70%;
+    margin: 10px auto;
+  }
+  .img-grp a img{
+    width: 100%;
+
+  }
+  .me-time,.location_icon_sidebar,.surprise_icon_sidebar{
+    display: none;
+  }
+  .footer_icon li a i{
+    font-size: 20px;
+} 
+.footer_icon li a{
+  padding: 0;
+}
+
+  
+}
+
+@media(max-width:1000px) and (min-width:750px) {
+  #innerbox1,#innerbox2{
+    width: 100%;
+  }
+  .me-time,.location_icon_sidebar,.surprise_icon_sidebar{
+    display: none;
+  }
+  #innerbox1{
+    padding: 0;
+  }
+  
+  #innerbox1 img{
+    object-fit: cover;
+    width: auto;
+  }
+  #box{
+    flex-direction: column;
+  }
+  #innerbox2,#innerbox2 h2{
+    text-align: center;
+  }
+  #desc{
+    margin: auto;
+    width: 80%;
+  }
+  #show{
+    margin: 50px 0;
+  }
+  .content-checkout{
+    width: 80%;
+  }
+  #main{
+    width: 50%;
+    
+  }
+  .secondpro{
+    flex-wrap: wrap;
+  }
+  .second-h2{
+    margin: 50px 0 0;
+  }
+  #buybtn{
+    margin:20px 0 0;
+  }
+  .main-side-nav{
+    top: 10vh;
+  }
+}
+
+@media(max-width:1200px) and (min-width:1000px) {
+  .main-side-nav{
+    top: 0vh;
+  }
+}
+
+@media(max-width:1400px) and (min-width:1200px) {
+  
+}
+
+@media(min-width:1400px) {}
+
