--- a/css/style.css
+++ b/css/style.css
@@ -427,3 +427,23 @@ h3 {
   justify-content: start;
   align-items: center;
 }
+@media(max-width:750px){
+.footer div div{
+  flex-wrap:wrap ;
+  justify-content: left;
+}
+.formWrap {
+  box-shadow: -3px 0px 38px -9px rgba(0, 0, 0, 0.53);
+  border-radius: 11px;
+  padding: 11px 10px;
+  margin: 10px;
+}
+.homeFormSecRight{
+  box-shadow: none;
+}
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 8px;
+  background: #ccc;
+}
+}
